	  because qof.h includes it for us.  Besides, it doesn't fix
	  the whole problem.

	* lots of files:
	  Revert r13749.  Wedon't need to explicitly #include glib.h
	  because qof.h includes it for us.  Also, this changeset contains
	  lots of other stuff that has nothing to do with glib.h.  Note
	  that this revision wont build, but I'll fix that shortly.

2006-04-08  David Hampton  <hampton@employees.org>

	* src/gnome-utils/account-quickfill.c: Eliminate some unnecessary
	work by comparing the account name in the quickfill with the
	actual account name, and only rebuilding the quickfill if they
	differ.  This improves GnuCash's response somewhat, but still
	needs more improvement.

2006-04-07  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Include the svn revision
	number in the about dialog.

2006-04-07  Derek Atkins  <derek@ihtfp.com>

	* lib/libqof/qof/qof.h:  QOF requires <glib.h>

2006-04-07  Neil Williams  <linux@codehelp.co.uk>

	* libqof/qof/qof-be-utils.h : Removed. Content
	moved into qofutil.c alongside the function versions.

	* libqof/qof/qofutil.c : Replaces gnc-engine-util.c
	* libqof/qof/gnc-engine-util.c : Removed.
	* libqof/qof/qofutil.h : Replaces gnc-engine-util.h
	* libqof/qof/gnc-engine-util.h : Removed.

	Standardise on gint and gchar. libqof 0.6.4 release.
	* libqof/qof/qofbackend-p.h :
	* libqof/qof/qofbook.c :
	* libqof/qof/qofbackend.h : Replace Doxygen fix.
	* libqof/qof/qofbook.h :
	* libqof/qof/kvp_frame.c :
	* libqof/qof/qofquery.c :
	* libqof/qof/kvp_frame.h :
	* libqof/qof/qoflog.c : Add Utilities to the default
	log_module list.
	* libqof/qof/qofquerycore.h :
	* libqof/qof/qoflog.h :
	* libqof/qof/qofsession.h :
	* libqof/qof/qofid-p.h :
	* libqof/qof/qofreference.c :
	* libqof/qof/qofsql.c : Allow INSERT queries 
	to be logged.
	* libqof/qof/qofsql.h :
	* libqof/qof/gnc-numeric.h :
	* libqof/qof/qofclass.h :
	* libqof/qof/qofla-dir.h.in : Licence typo.
	* libqof/qof/qof.h : New files.